# federation-registry-lib

./: .coveragerc  .env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Implementation choices.md  Jenkins  Jenkinsfile  LICENSE  README.md  ToDo.md  Todo2.md  compose.backend.dev.yaml  compose.dev.yml  compose.neo4j.dev.yaml  config.json  docker-compose.development.yml  docker-compose.neo4j.dev.yml  docker-compose.oidc.yaml  docker-compose.override.yml  docker-compose.yml  docker.Jenkinsfile  noxfile.py  pyproject.toml  requirements.dev.txt  requirements.txt  test.py  testconfig.py  tests.Jenkinsfile
backend/: .coveragerc  .env  .gitignore  Dockerfile  README.md  mkdocs.yml  noxfile.py  pyproject.toml  requirements.dev.txt
backend/app/: config.py  crud.py  main.py  models.py  pagination.py  query.py  router.py  utils.py
backend/app/auth/: dependencies.py  schemas.py
backend/app/auth_method/: schemas.py
backend/app/flavor/: crud.py  models.py  schemas.py  schemas_extended.py
backend/app/flavor/api/: dependencies.py  router.py
backend/app/identity_provider/: crud.py  models.py  schemas.py  schemas_extended.py
backend/app/identity_provider/api/: dependencies.py  router.py
backend/app/image/: crud.py  models.py  schemas.py  schemas_extended.py
backend/app/image/api/: dependencies.py  router.py
backend/app/location/: crud.py  models.py  schemas.py  schemas_extended.py
backend/app/location/api/: dependencies.py  router.py
backend/app/network/: crud.py  models.py  schemas.py  schemas_extended.py
backend/app/network/api/: dependencies.py
backend/app/project/: crud.py  models.py  schemas.py  schemas_extended.py
backend/app/project/api/: dependencies.py  router.py
backend/app/provider/: crud.py  enum.py  models.py  schemas.py  schemas_extended.py
backend/app/provider/api/: dependencies.py  router.py
backend/app/quota/: crud.py  enum.py  models.py  schemas.py  schemas_extended.py
backend/app/quota/api/: dependencies.py  router.py
backend/app/region/: crud.py  models.py  schemas.py  schemas_extended.py
backend/app/region/api/: dependencies.py
backend/app/service/: crud.py  enum.py  models.py  schemas.py  schemas_extended.py
backend/app/service/api/: dependencies.py  router.py
backend/app/sla/: crud.py  models.py  schemas.py  schemas_extended.py
backend/app/sla/api/: dependencies.py  router.py
backend/app/tests/: conftest.py
backend/app/tests/crud/: test_block_storage_quota.py  test_block_storage_service.py  test_compute_quota.py  test_compute_service.py  test_flavor.py  test_identity_provider.py  test_identity_service.py  test_image.py  test_location.py  test_network.py  test_network_service.py  test_project.py  test_provider.py  test_quota.py  test_region.py  test_service.py  test_sla.py  test_user_group.py
backend/app/tests/schemas/: test_block_storage_quota.py  test_block_storage_service.py  test_compute_quota.py  test_compute_service.py  test_flavor.py  test_identity_provider.py  test_identity_service.py  test_image.py  test_location.py  test_network.py  test_network_service.py  test_project.py  test_provider.py  test_quota.py  test_region.py  test_service.py  test_sla.py  test_user_group.py
backend/app/tests/utils/: block_storage_quota.py  block_storage_service.py  compute_quota.py  compute_service.py  flavor.py  identity_provider.py  identity_service.py  image.py  location.py  quota.py  (+9 more)
backend/app/user_group/: crud.py  models.py  schemas.py  schemas_extended.py
backend/scripts/: .cmdb-config.yaml  .config.yaml  cloud-cnaf.config.yaml  cloud-veneto.config.yaml  cmdb-config-schema.json  cmdb.py  config.yaml  crud.py  idps.yaml  logger.py  main.py  main_old.py  models.py  provider-config-schema.json  recas.config.yaml  test.py  utils.py
backend/scripts/cmdb/: api.py
backend/scripts/cruds/: core.py  flavor.py  identity_provider.py  image.py  location.py  network.py  project.py  provider.py  quota.py  region.py  service.py  sla.py  user_group.py
backend/scripts/models/: __init__.py  cmdb.py  config.py  provider.py
backend/scripts/openstack/: schemas.py
backend/scripts/providers/: openstack.py  opnstk.py
backend/tests/: conftest.py
backend/tests/crud/: test_block_storage_quota.py  test_block_storage_service.py  test_compute_quota.py  test_compute_service.py  test_flavor.py  test_identity_provider.py  test_identity_service.py  test_image.py  test_location.py  test_network.py  test_network_service.py  test_project.py  test_provider.py  test_region.py  test_sla.py  test_user_group.py
backend/tests/fixtures/: block_storage_quota.py  block_storage_service.py  compute_quota.py  compute_service.py  flavor.py  identity_provider.py  identity_service.py  image.py  location.py  network.py  network_quota.py  network_service.py  project.py  provider.py  region.py  sla.py  user_group.py
backend/tests/schemas/: test_block_storage_quota.py  test_block_storage_service.py  test_compute_quota.py  test_compute_service.py  test_flavor.py  test_identity_provider.py  test_identity_service.py  test_image.py  test_location.py  test_network.py  test_network_service.py  test_project.py  test_provider.py  test_region.py  test_sla.py  test_user_group.py
backend/tests/utils/: block_storage_quota.py  block_storage_service.py  compute_quota.py  compute_service.py  flavor.py  identity_provider.py  identity_service.py  image.py  location.py  network.py  network_quota.py  network_service.py  project.py  provider.py  region.py  sla.py  user_group.py  utils.py
(+1488 files in other folders)
