[tool.poetry]
name = "fedreg"
version = "1.0.1"
description = "Python library with the Object Models used in the federation-registry app."
authors = ["Giovanni Savarese <giovanni.savarese@ba.infn.it>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0.0"
neomodel = "^5.3.0"
pydantic = {extras = ["email"], version = ">=1.10.9,<2.0.0"}
pycountry = "^22.3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cases = "^3.8.1"
pytest-cov = "^4.1.0"
pre-commit = "^3.3.3"
ruff = "^0.9.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
# Add rules on PyFlakes(F), pycodestyle (E,W), isort (I), 
# mccabe (C90) pep8-naming (N), pydocstyle (D), pyupgrade (UP), 
# ruff specific rules (RUF),
# flake8-bugbear (B), flake8-logging-format (G), flake8-quotes (Q)
extend-select = ["B", "C90", "E", "F", "G", "I", "N", "Q", "RUF", "UP", "W"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = "--resetdb"

[tool.coverage.run]
relative_files = true
source = ["fedreg"]
branch = true
omit = ["tests/**"]