[tool.poetry]
name = "catalog-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8.1"
flaat = "^1.1.8"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
neomodel = "^5.0.1"
pydantic = {extras = ["email"], version = "^1.10.9"}
pycountry = "^22.3.5"
python-openstackclient = "^6.2.0"
python-glanceclient = "^4.4.0"

[tool.poetry.dev-dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
nox = "^2023.4.22"
mkdocs-material = "^9.1.17"
mkdocs-git-authors-plugin = "^0.7.2"
mkdocstrings-python = "^1.1.2"
Pillow = "^9.5.0"
CairoSVG = "^2.7.0"
httpx = "^0.24.1"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
